pratique/2019-p2-f3-metro.out-comp.txt
2019-p2-f3-metro.cpp: In function ‘void bfs(int, std::vector<std::vector<int> >&, std::vector<int>&)’:
2019-p2-f3-metro.cpp:25:72: error: no matching function for call to ‘find(std::vector<bool>::iterator, std::vector<bool>::iterator, bool)’
   25 |                 maxDepth = max(maxDepth, distance(visited.begin(), find(visited.begin(), visited.end(), true)) - 1);
      |                                                                    ~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /usr/include/c++/11/bits/locale_facets.h:48,
                 from /usr/include/c++/11/bits/basic_ios.h:37,
                 from /usr/include/c++/11/ios:44,
                 from /usr/include/c++/11/ostream:38,
                 from /usr/include/c++/11/iostream:39,
                 from 2019-p2-f3-metro.cpp:2:
/usr/include/c++/11/bits/streambuf_iterator.h:421:5: note: candidate: ‘template<class _CharT2> typename __gnu_cxx::__enable_if<std::__is_char<_CharT2>::__value, std::istreambuf_iterator<_CharT, std::char_traits<_CharT> > >::__type std::find(std::istreambuf_iterator<_CharT, std::char_traits<_CharT> >, std::istreambuf_iterator<_CharT, std::char_traits<_CharT> >, const _CharT2&)’
  421 |     find(istreambuf_iterator<_CharT> __first,
      |     ^~~~
/usr/include/c++/11/bits/streambuf_iterator.h:421:5: note:   template argument deduction/substitution failed:
2019-p2-f3-metro.cpp:25:72: note:   ‘std::_Bit_iterator’ is not derived from ‘std::istreambuf_iterator<_CharT, std::char_traits<_CharT> >’
   25 |                 maxDepth = max(maxDepth, distance(visited.begin(), find(visited.begin(), visited.end(), true)) - 1);
      |                                                                    ~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
2019-p2-f3-metro.cpp: In function ‘int main()’:
2019-p2-f3-metro.cpp:60:23: error: ‘INT_MAX’ was not declared in this scope
   60 |     int minDiameter = INT_MAX;
      |                       ^~~~~~~
2019-p2-f3-metro.cpp:5:1: note: ‘INT_MAX’ is defined in header ‘<climits>’; did you forget to ‘#include <climits>’?
    4 | #include <queue>
  +++ |+#include <climits>
    5 | 
